@@ -73,7 +73,7 @@ _nss_files_initgroups_dyn (const char *user, gid_t group, long int *start,
 	  if (buffer_use_malloc || ! __libc_use_alloca (buflen + newbuflen))
 	    {
 	      void *newbuf = realloc (buffer_use_malloc ? buffer : NULL,
-				      buflen);
+				      newbuflen);
 	      if (newbuf == NULL)
 		{
 		  *errnop = ENOMEM;
